	- Fixed #924: Defect - After Update from RC3 to RC4.1 pop3-ssl and imap-ssl don't work (dovecot 1.2.15)
	- Fixed #926: Security Issue - apache_php_fpm - suexec must be enabled
	- Fixed #928: Defect - Courier/Maildrop - Wrong permissions after reboot
	- Fixed #929: Malfunction - User limits not changeable if Reseller's Email account limit is set to -1

------------------------------------------------------------------------------------------------------------------------
1.1.0-rc4.1
------------------------------------------------------------------------------------------------------------------------

2013-09-29: Torsten Widmann
	- RELEASE i-MSCP 1.1.0-rc4.1 (Fast bugfixes release)

------------------------------------------------------------------------------------------------------------------------
1.1.0-rc4
------------------------------------------------------------------------------------------------------------------------

2013-09-29: Torsten Widmann
	- RELEASE i-MSCP 1.1.0-rc4

CONFIG:
	- Added specific quota warning script for Dovecot 2.x.x branch
	- Added: Packages file for Debian Jessie (testing)
	- Added: SPF Resource Record Type in bind template
	- Added: php5-imap package (required by i-MSCP frontEnd)
	- Changed: php5-mysql package to php5-mysqlnd (native driver) when available
	- Removed: php5-adodb package
	- Removed Dovecot sieve plugin configuration (Such parameter must be provided as plugin)
	- Updated: Apache templates to support 2.4.x branch
	- Updated: Dovecot configuration files

ENGINE:
	- Added: Support for Apache 2.4.x branch
	- Added: Database connection timeout (3 seconds)
	- Added: MySQL transaction routines
	- Added: Webstats support for subodmains
	- Fixed: Both, the domain_disable_page directory and statistics directory must be excluded from disk quota accounting
	- Fixed: Diskspace not counted for subdomain Maildirs (Disk quota script)
	- Fixed: Error 500 (Apache) after creation of any protected area