@@ -30,6 +30,7 @@ Tickets:
 	- Fixed #926: Security Issue - apache_php_fpm - suexec must be enabled
 	- Fixed #928: Defect - Courier/Maildrop - Wrong permissions after reboot
 	- Fixed #929: Malfunction - User limits not changeable if Reseller's Email account limit is set to -1
+	- Fixed #932: Bug - Unable to switch from a redirected subdomain to normal subdomain
 
 ------------------------------------------------------------------------------------------------------------------------
 1.1.0-rc4.1
